# about-c-plus-plus

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  Makefile  README.md
src/: CMakeLists.txt  header.h  main.cpp
src/1_basics/: 01_values_types.cpp  02_functions.cpp  03_namespaces.cpp  04_classes.h  05_classes.cpp  06_hierarchies.h  07_hierarchies.cpp  08_operators.cpp  09_exceptions.cpp
src/2_templates/: 01_templates.cpp  02_metaprogramming.cpp  03_manual_control_instantiation_decl.h  04_manual_control_instantiation_explicit.cpp  05_manual_control_instantiation.h
src/3_interoperability/: interoperability.cpp
src/3_interoperability/call_c_from_cpp/: clib.c  clib.h  cpplib.h
src/3_interoperability/call_cpp_from_c/: NLPersonRef.cpp  NLPersonRef.h  Person.h
src/4_other/: 01_casts.cpp  02_miscellaneous.cpp
